--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-//    api project(':recy')
-    implementation 'com.onion:Recy:1.0.0'
+    api project(':recy')
+//    implementation 'com.onion:Recy:1.0.0'
 
 }
