--- a/recy/build.gradle
+++ b/recy/build.gradle
@@ -45,12 +45,12 @@ dependencies {
 }
 
 publish {
-    repoName = 'base'//不指明，默认是上传到maven,指明的话这里的名字需要和你创建的仓库的名字一样
-    userOrg = 'zhang759308541'//bintray.com你的用户名
-    groupId = 'com.onion'//jcenter上的路径
-    artifactId = 'Recy'//项目名称
-    publishVersion = '1.0.1'//版本号
-    desc = 'recy base'//描述，不重要
-    website = 'https://github.com/Onionsss/Recy'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
+    repoName = 'base'
+    userOrg = 'zhang759308541'
+    groupId = 'com.onion'
+    artifactId = 'Recy'
+    publishVersion = '1.0.1'
+    desc = 'recy base'
+    website = 'https://github.com/Onionsss/Recy'
     // ./gradlew clean build bintrayUpload -PbintrayUser=zhang759308541 -PbintrayKey=ee2adda0de63bd4a097497905626a6123522d3eb -PdryRun=false
 }
