--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     api project(':recy')
 //    implementation 'com.onion:Recy:1.0.1'
+    implementation 'com.google.android.material:material:1.1.0'
+
 
 }
